2009-04-05 Holger Vogt
  * com_fft.c, inpcom.c, variable.c, variable.h, resource.c, cpitf.c, 
    plotit.c, inpgtok.c: 
    some more memory leaks removed
    spicenum.c: release of memory for dico->dyncategory corrected

2009-04-01 Dietmar Warning
  * frontend/resource.c, misc/misc_time.c: init of rusage structure to prevent
    read of uninitialized memory, found with dbx under solaris

2009-03-29 Holger Vogt
  * inp.c, variable.c: some more memory leaks removed

2009-03-27 Holger Vogt
  * inpcom.c, variable.c, cpitf.c: memory leaks removed, which were detected by
    valgrind-3.4.1 under SUSE 11.1

2009-03-22 Holger Vogt
  * inpcom.c: readline() now returns /n for an empty line, dynLlen consists of
    maximum line length plus some space for parameter substitution and has a
    minimum size of 512.
  * spicenum.c, xpressn.c, general.h, numparam.h: dynamic memory allocation 
    also for all string manipultions, Strbig now is a macro using tmalloc, 
    the macro Strrem deallocates the memory, the size of the arrays is dynLlen.
      
2009-03-21 Holger Vogt
  * inpcom.c, fteinp.h, inpdefs.h: line renumbering of input deck added
    to the end of fcn inp_readall(). cc->li_line_original now contains
    the line numbering of the input file

2009-03-15 Holger Vogt
  * cktfinddev.c: some (optical) cleanup
  * numparam.h, xpressn.c, spicenum.c, inpcom.c: dynamic memory
    allocation for numparam (the easier part) 

2009-03-08 Holger Vogt
  * dctran.c no printout of 'Initial transient solution' if 
    .options noacct is set

2009-03-08 Holger Vogt
  * plotit.c fcn plotit(): add quotes again for xlabel, ylabel, title
   in cline

2009-03-07 Holger Vogt
  * inpcom.c fcn inp_fix_for_numparam(): no quotes changed for plot lines within
    control section, e.g. plot v(2) xlabel 'my input' ylabel 'output'

2009-03-07 Dietmar Warning
 * tests/bsim4/*.out: same as below for bsim3

2009-03-07 Holger Vogt